; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-dln2.c_dln2_gpio_pin_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-dln2.c_dln2_gpio_pin_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dln2_gpio = type { i32 }
%struct.dln2_gpio_pin = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dln2_gpio*, i32, i32)* @dln2_gpio_pin_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dln2_gpio_pin_cmd(%struct.dln2_gpio* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.dln2_gpio*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.dln2_gpio_pin, align 4
  store %struct.dln2_gpio* %0, %struct.dln2_gpio** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = getelementptr inbounds %struct.dln2_gpio_pin, %struct.dln2_gpio_pin* %7, i32 0, i32 0
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @cpu_to_le16(i32 %9)
  store i32 %10, i32* %8, align 4
  %11 = load %struct.dln2_gpio*, %struct.dln2_gpio** %4, align 8
  %12 = getelementptr inbounds %struct.dln2_gpio, %struct.dln2_gpio* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @dln2_transfer_tx(i32 %13, i32 %14, %struct.dln2_gpio_pin* %7, i32 4)
  ret i32 %15
}

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @dln2_transfer_tx(i32, i32, %struct.dln2_gpio_pin*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
